--- a/BaslerWorker/BaslerWorker.vcxproj
+++ b/BaslerWorker/BaslerWorker.vcxproj
@@ -134,7 +134,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Stanke\Documents\lib\libconfig-1.5\lib;C:\Program Files\opencv\build\include;$(PYLON_DEV_DIR)\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\opencv\build\include;$(PYLON_DEV_DIR)\include</AdditionalIncludeDirectories>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Link>
