A lot of debugging and foolproofing done

--- a/BaslerWorker/defaults.cfg
+++ b/BaslerWorker/defaults.cfg
@@ -1,20 +1,33 @@
 #Pozor, v subore nesmu byt ziadne medzery ani "="
 #Spravne:   PARAMETER=HODNOTA
 #Nespravne: PARAMETER = "A=HODNOTA";
+#Mriezka ako komentar funguje len na zaciatku riadka !
 
+#######################################################
 #Parametre pripojenia a klucovych prikazov
+#Pozor, klucovy prikaz sa nesmie nachadzat v ziadnej sprave
+#je vhodne zvolit unikatny vyraz
+#######################################################
+
 PORT=27016
-EXIT_KEY=#exit
-CLOSE_KEY=#close
+EXIT_KEY=<exit>
+CLOSE_KEY=<close>
 IMAGE_PATH=.\\
-#alternativne cesty
+
+#Alternativne cesty napr.:
 #IMAGE_PATH=..\\
 #IMAGE_PATH=Images\\
 
+#######################################################
 #Hlasky kt. posiela program pri chybe v komunikacii
+#alebo pri chybe v behu programu
+#######################################################
+
 SN_NOT_FOUND=err_sn_not_found;
 NO_CAMERA_FOUND=err_no_camera_found;
 CAMERA_FOUND=camera_found;
 CAPTURE_FAILED=err_capture_failed;
 SAVING_FAILED=err_image_not_saved;
 IMG_SAVED=image_saved_succesfully;
+INVALID_FILENAME=err_invalid_filename;
+MSG_SHORT=err_message_too_short_or_invalid;
