--- a/BaslerWorker/BaslerWorker.vcxproj
+++ b/BaslerWorker/BaslerWorker.vcxproj
@@ -152,6 +152,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaslerWorker.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
