--- a/BaslerWorker/defaults.cfg
+++ b/BaslerWorker/defaults.cfg
@@ -31,3 +31,4 @@ SAVING_FAILED=err_image_not_saved;
 IMG_SAVED=image_saved_succesfully;
 INVALID_FILENAME=err_invalid_filename;
 MSG_SHORT=err_message_too_short_or_invalid;
+EXIT_MSG=exitting...;
