issue with camerra connection while receiving fixed.

--- a/BaslerWorker/defaults.cfg
+++ b/BaslerWorker/defaults.cfg
@@ -32,3 +32,4 @@ IMG_SAVED=image_saved_succesfully;
 INVALID_FILENAME=err_invalid_filename;
 MSG_SHORT=err_message_too_short_or_invalid;
 EXIT_MSG=exitting...;
+CONN_BROKEN=err_connection_to_camera_broken;
